--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.15.2",
     "formik": "^1.5.1",
     "node-sass": "^4.11.0",
+    "ramda": "^0.26.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
@@ -37,6 +38,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/ramda": "^0.26.6",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
