--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ramda": "^0.26.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-intl": "^2.8.0",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.0-rc.1",
