--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://1998MaxChykalo.github.io/todo-app",
   "dependencies": {
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
@@ -30,7 +31,9 @@
     "file-loader": "2.0.0",
     "formik": "^1.5.1",
     "fs-extra": "7.0.1",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
+    "i18next": "^15.0.9",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
@@ -49,6 +52,7 @@
     "react-app-polyfill": "^0.2.2",
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.5",
+    "react-i18next": "^10.6.2",
     "react-intl": "^2.8.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.0-rc.1",
@@ -69,8 +73,9 @@
     "yup": "^0.27.0"
   },
   "scripts": {
+    "predeploy": "node scripts/build.js",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
