--- a/package.json
+++ b/package.json
@@ -88,11 +88,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
     "@types/ramda": "^0.26.6",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
     "@types/styled-components": "^4.1.12",
+    "chai": "^4.2.0",
+    "cypress": "^3.2.0",
+    "mocha": "^6.1.4",
     "redux-devtools-extension": "^2.13.8"
   },
   "jest": {
